<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="task"
            type="ru.ayunusov.todolist.domain.model.Task" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".presentation.description.DescriptionDoFragment">

            <TextView
                android:id="@+id/nameTaskTextView"
                style="@style/NameTask"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_margin"
                android:text="@{task.name}"
                app:layout_constraintEnd_toStartOf="@+id/endGuideline"
                app:layout_constraintStart_toStartOf="@+id/startGuideline"
                app:layout_constraintTop_toBottomOf="@id/toolbar" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/startGuideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="@dimen/default_margin" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/endGuideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_end="@dimen/default_margin" />

            <TextView
                android:id="@+id/dateTaskTextView"
                style="@style/DateTimeTheme"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_margin"
                android:text="@{task.date}"
                app:layout_constraintEnd_toStartOf="@+id/endGuideline"
                app:layout_constraintStart_toStartOf="@+id/startGuideline"
                app:layout_constraintTop_toBottomOf="@id/nameTaskTextView" />

            <TextView
                android:id="@+id/timeTaskTextView"
                style="@style/DateTimeTheme"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_margin"
                android:text="@{@string/range_time(task.dateStartTime,task.dateEndTime)}"
                app:layout_constraintEnd_toStartOf="@+id/endGuideline"
                app:layout_constraintStart_toStartOf="@+id/startGuideline"
                app:layout_constraintTop_toBottomOf="@id/dateTaskTextView" />

            <TextView
                android:id="@+id/descTaskTextView"
                style="@style/DescTheme"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_margin"
                android:layout_marginBottom="@dimen/default_margin"
                android:text="@{task.description}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/endGuideline"
                app:layout_constraintStart_toStartOf="@+id/startGuideline"
                app:layout_constraintTop_toBottomOf="@id/timeTaskTextView" />

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/colorPrimary"
                android:minHeight="?attr/actionBarSize"
                android:theme="@style/ToolBarStyle"
                app:layout_constraintTop_toTopOf="parent"
                app:menu="@menu/desc_menu" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>


</layout>
