<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/editTask"
        android:title="@string/edit"
        android:icon="@drawable/baseline_edit"
        app:showAsAction="always"/>

    <item android:id="@+id/deleteTask"
        android:title="@string/delete"
        android:icon="@drawable/baseline_delete_24"
        app:showAsAction="ifRoom"/>
</menu>