...
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_end="@dimen/default_margin" />

            <EditText
                android:id="@+id/nameTaskEditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_margin"
                android:ems="10"
                android:hint="@string/name"
                android:importantForAutofill="no"
...
                app:layout_constraintBaseline_toBaselineOf="@id/dateEndTextView"
                app:layout_constraintEnd_toStartOf="@+id/endGuideline"
                app:layout_constraintStart_toEndOf="@+id/dateEndTextView"
                tools:text="12:00" />

            <EditText
                android:id="@+id/descTaskEditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_margin"
                android:layout_marginBottom="@dimen/desc_task_edit_text_margin_bottom"
                android:ems="10"
                android:gravity="start|top"
...
