<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/addTask"
        android:title="@string/save"
        android:icon="@drawable/baseline_done_24"
        app:showAsAction="always"/>
</menu>